fixes
-removed noise on blobs
-fixed background not showing

--- a/style.css
+++ b/style.css
@@ -548,23 +548,6 @@ body {
 	z-index: -10;
 }
 
-.hero-noise {
-	position: absolute;
-	top: 0;
-	height: 100vh;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	z-index: -80;
-	box-sizing: border-box;
-	background-clip: border-box;
-	background-image: url(https://yasingenc.net/noise.png);
-	background-repeat: repeat;
-	background-size: auto;
-	display: flex;
-}
-
 #skills {
 	display: block;
 	width: 100%;
@@ -572,13 +555,22 @@ body {
 	z-index: 1;
 }
 
-.bg {
+#main-bg {
 	position: absolute;
 	top: 100vh;
 	width: 100%;
 	height: 240vh;
 	background-color: var(--bg-primary);
-	z-index: -5;
+	z-index: -9;
+}
+
+#experience-bg {
+	position: absolute;
+	width: 100%;
+	height: 105%;
+	left: 0;
+	background-color: var(--bg-primary);
+	z-index: -9;
 }
 
 .circle {
@@ -729,25 +721,8 @@ body {
 		rgba(147, 112, 216, 0.5)
 	);
 	filter: blur(100px);
-	z-index: -2;
-	opacity: var(--opacity);
-}
-
-.main-noise {
-	position: absolute;
-	top: 100vh;
-	height: 240vh;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
 	z-index: -1;
-	box-sizing: border-box;
-	background-clip: border-box;
-	background-image: url(https://yasingenc.net/noise.png);
-	background-repeat: repeat;
-	background-size: auto;
-	display: flex;
+	opacity: var(--opacity);
 }
 
 .skills-blur {
@@ -781,7 +756,8 @@ body {
 }
 
 #experience {
-	overflow: hidden;
+	overflow: clip;
+	width: 100%;
 	padding-top: 20%;
 	padding: 4%;
 }
